scopes and summaries

--- a/utilities/sequential-id/api-reference/api.yml
+++ b/utilities/sequential-id/api-reference/api.yml
@@ -51,14 +51,9 @@ paths:
           $ref: '#/components/responses/Unauthorized_401'
         '403':
           $ref: '#/components/responses/trait_yaasAware_403'
-      summary: Retrieving all schemas
+      summary: Retrieving all sequence schemas
       description: |-
         Gets all sequence schemas.
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_view`
       operationId: GET-sequential-id-retrieve-tenant-schemas
       security:
         - OAuth2:
@@ -82,14 +77,9 @@ paths:
           $ref: '#/components/responses/Unauthorized_401'
         '403':
           $ref: '#/components/responses/trait_yaasAware_403'
-      summary: Creating a schema
+      summary: Creating a sequence schema
       description: |-
         Creates a new sequence schema.
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_manage`
       operationId: POST-sequential-id-create-tenant-schema
       requestBody:
         content:
@@ -158,14 +148,9 @@ paths:
           $ref: '#/components/responses/Unauthorized_401'
         '403':
           $ref: '#/components/responses/trait_yaasAware_403'
-      summary: Retrieving a schema
+      summary: Retrieving a sequence schema
       description: |-
         Gets a sequence schema by its id.
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_view`
       operationId: GET-sequential-id-retrieve-schema
       parameters:
         - $ref: '#/components/parameters/trait_tenant'
@@ -194,14 +179,9 @@ paths:
           $ref: '#/components/responses/trait_yaasAware_403'
         '404':
           $ref: '#/components/responses/trait_yaasAware_404'
-      summary: Activating a schema
+      summary: Activating a sequence schema
       description: |-
         Sets the schema as active in the system.
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_manage`
       operationId: POST-sequential-id-activate-schema
       parameters:
         - $ref: '#/components/parameters/trait_tenant'
@@ -255,14 +235,9 @@ paths:
           $ref: '#/components/responses/Unauthorized_401'
         '403':
           $ref: '#/components/responses/trait_yaasAware_403'
-      summary: Retrieving all schema types
+      summary: Retrieving all sequence schema types
       description: |-
         Gets all sequence schemas.
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_view`
       operationId: GET-sequential-id-retrieve-schema-types
       security:
         - OAuth2:
@@ -313,16 +288,10 @@ paths:
           $ref: '#/components/responses/trait_yaasAware_403'
         '404':
           $ref: '#/components/responses/trait_yaasAware_404'
-      summary: Creating a nextId for schema type
+      summary: Creating a nextId for a sequence schema type
       description: |-
         Creates and returns the `nextId` according to the specified sequence.
         If you specify the `sequenceKey` in request body, the `nextId` number is generated for this sequence, otherwise default pool is used.
-
-
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_view`
       operationId: POST-sequential-id-create-schema-type-nextId
       requestBody:
         content:
@@ -375,14 +344,10 @@ paths:
           $ref: '#/components/responses/Unauthorized_401'
         '403':
           $ref: '#/components/responses/trait_yaasAware_403'
-      summary: Creating nextIds for schema types
+      summary: Creating nextIds for sequence schema types
       description: |-
         Creates and returns multiple `nextIds` for the specified sequence schemas.
         If you specify the `sequenceKey` in request body, the `nextIds` numbers are generated for this sequence, otherwise default pool is used.
-        ***
-
-         ### Required scopes
-        * `sequentialid.schema_view`
       parameters:
         - $ref: '#/components/parameters/trait_siteCode'
       operationId: POST-sequential-id-create-schema-types-nextIds
