--- a/companies-and-customers/vendor-service/api-reference/api.yml
+++ b/companies-and-customers/vendor-service/api-reference/api.yml
@@ -23,7 +23,7 @@ paths:
         Creates a new vendor for the tenant. A vendor represents a supplier or a business partner in the system.
     
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       requestBody:
         content:
@@ -81,7 +81,7 @@ paths:
 
 
       security:
-        - OAuth2_ReadOrManage:
+        - OAuth2:
             - vendor.vendor_read
             - vendor.vendor_manage
       parameters:
@@ -122,7 +122,7 @@ paths:
         Retrieves all vendors that match the provided criteria.
 
       security:
-      - OAuth2_ReadOrManage:
+      - OAuth2:
           - vendor.vendor_read
           - vendor.vendor_manage
       parameters:
@@ -181,7 +181,7 @@ paths:
       description: |-
         Retrieves a vendor by the specified unique identifier.
       security:
-        - OAuth2_ReadOrManage:
+        - OAuth2:
             - vendor.vendor_read
             - vendor.vendor_manage
       responses:
@@ -206,7 +206,7 @@ paths:
         Updates or creates a vendor with a given vendor ID. You can omit the `metadata.version`, but then optimistic locking is not enabled.
 
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       requestBody:
         content:
@@ -269,7 +269,7 @@ paths:
         Deletes a vendor.
 
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       responses:
         '204':
@@ -296,7 +296,7 @@ paths:
         Creates a new location for the tenant. A location represents address information for a vendor.
 
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       requestBody:
         content:
@@ -356,7 +356,7 @@ paths:
         Retrieves all locations assigned to the tenant. You can filter, sort and paginate the results with query parameters.
 
       security:
-      - OAuth2_ReadOrManage:
+      - OAuth2:
           - vendor.vendor_read
           - vendor.vendor_manage
       parameters:
@@ -401,7 +401,7 @@ paths:
         Retrieves a location by the specified unique identifier.
 
       security:
-        - OAuth2_ReadOrManage:
+        - OAuth2:
             - vendor.vendor_read
             - vendor.vendor_manage
       responses:
@@ -426,7 +426,7 @@ paths:
         Updates or creates a location with a given location ID. You can omit the `metadata.version`, but then optimistic locking is not enabled.
 
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       requestBody:
         content:
@@ -491,7 +491,7 @@ paths:
       description: |-
         Deletes a location.
       security:
-        - OAuth2_Manage:
+        - OAuth2:
             - vendor.vendor_manage
       responses:
         '204':
@@ -1252,23 +1252,7 @@ components:
       description: |
         The country code of the contact details of the location.
   securitySchemes:
-    OAuth2_Read:
-      type: oauth2
-      flows:
-        clientCredentials:
-          tokenUrl: 'https://api.emporix.io/oauth/token'
-          scopes:
-            vendor.vendor_read: Needed to read vendors and locations
-
-    OAuth2_Manage:
-      type: oauth2
-      flows:
-        clientCredentials:
-          tokenUrl: 'https://api.emporix.io/oauth/token'
-          scopes:
-            vendor.vendor_manage: Needed to manage vendors and locations
-
-    OAuth2_ReadOrManage:
+    OAuth2:
       type: oauth2
       flows:
         clientCredentials:
@@ -1276,3 +1260,7 @@ components:
           scopes:
             vendor.vendor_read: Needed to read vendors and locations
             vendor.vendor_manage: Needed to manage vendors and locations
+security:
+  - OAuth2:
+      - vendor.vendor_read
+      - vendor.vendor_manage 
