--- a/checkout/shopping-list/api-reference/api.yml
+++ b/checkout/shopping-list/api-reference/api.yml
@@ -21,9 +21,9 @@ paths:
         Creates a shopping list.
         ***
 
-        ### Required scopes
+        ### Additional scope info
 
-          * `shoppinglist.shoppinglist_manage` - required for the employee to create a shopping list for a provided customer. If the cope is not present, then the customerId is resolved from the token.
+          * `shoppinglist.shoppinglist_manage` - required for the employee to create a shopping list for a provided customer. If the scope is not present, then the customerId is resolved from the token.
       operationId: POST-shopping-list-create-shopping-list
       parameters:
         - name: tenant
@@ -99,6 +99,9 @@ paths:
         ### Required scopes
 
         * `shoppinglist.shoppinglist_read` - required for the employee to read shopping lists. If scope is not present, then the customerId is resolved from the token.
+      security:
+        - OAuth2:
+            - shoppinglist.shoppinglist_read
       operationId: GET-shopping-list-retrieve-shopping-list
       parameters:
         - name: tenant
@@ -157,9 +160,9 @@ paths:
         Updates a shopping list.
         ***
 
-        ### Required scopes
+        ### Scopes
 
-          * `shoppinglist.shoppinglist_manage` - required for the employee to update a shopping list. If scope is not present, then the operation is allowed for customer to update his own shopping list.
+          * `shoppinglist.shoppinglist_manage` - required for the employee to update a shopping list. If the scope is not present, then the operation is allowed for customer to update his own shopping list.
       operationId: PUT-shopping-list-update-customer-shopping-list
       parameters:
         - name: tenant
@@ -216,9 +219,9 @@ paths:
         Retrieves a shopping list based on the customer number. This endpoint is valid only for the employee.
         ***
 
-        ### Required scopes
-
-          * `shoppinglist.shoppinglist_read`
+      security:
+        - OAuth2:
+            - shoppinglist.shoppinglist_read
       operationId: GET-shopping-list-retrieve-customer-shopping-list
       parameters:
         - name: tenant
@@ -286,9 +289,9 @@ paths:
         Deletes a shopping list.
         ***
 
-        ### Required scopes
+        ### Additional scope info
 
-          * `shoppinglist.shoppinglist_manage` - required for the employee to delete a shopping list. If scope is not present, then the operation is allowed for customer to delete his own shopping list.
+          * `shoppinglist.shoppinglist_manage` - Required only for the employee to delete a shopping list. If the scope is not present, then the operation is allowed for customer to delete his own shopping list.
       operationId: DELETE-shopping-list-remove-customer-shopping-list
       parameters:
         - name: tenant
