--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -334,7 +334,7 @@ paths:
           format: uuid
         name: session-id
         in: header
-        description: Unique session's identifier which allows for storing the context of the chat. If not provided, the system generates it.
+        description: Unique session identifier which allows for storing the context of the chat. If not provided, the system generates it.
     post:
       summary: Starting agent chat
       operationId: POST-ai-agents-chat
@@ -363,7 +363,7 @@ paths:
         '500':
           $ref: '#/components/responses/500_resp_common'
       description: |-
-        Allows for communication with Emporix's agents.
+        Allows for communication with Emporix agents.
 
         ### Required scopes
 
@@ -383,7 +383,7 @@ paths:
           format: uuid
         name: session-id
         in: header
-        description: Unique session's identifier which allows for storing the context of the chat. If not provided, the system generates it.
+        description: Unique session identifier which allows for storing the context of the chat. If not provided, the system generates it.
     post:
       summary: Starting agent async chat
       operationId: POST-ai-agents-chat-async
@@ -409,7 +409,7 @@ paths:
         '500':
           $ref: '#/components/responses/500_resp_common'
       description: |-
-        Allows for communication with Emporix's agents in async way.
+        Allows for communication with Emporix agents in async way.
 
         ### Required scopes
 
@@ -1228,7 +1228,7 @@ paths:
         Deletes tokens by given ID.
         
         
-        ***Important***: If token is being used by an agent or by an mcp server then delete operation is not possible without `force` flag set to `true`.
+        ***Important***: If a token is being used by an agent or by an MCP server, then delete operation is not possible without `force` flag set to `true`.
         
         ### Required scopes
 
@@ -1253,7 +1253,7 @@ paths:
       operationId: GET-ai-list-mcp-servers
       responses:
         '200':
-          description: List of mcp servers.
+          description: List of MCP servers.
           content:
             application/json:
               schema:
@@ -1270,7 +1270,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_resp_common'
       description: |-
-        Retrieves mcp servers based on the provided query.
+        Retrieves MCP servers based on the provided query.
         
         ### Required scopes
 
@@ -1354,7 +1354,7 @@ paths:
         '404':
           $ref: '#/components/responses/404_resp_common'
       description: |-
-        Retrieves the mcp server by given ID.
+        Retrieves the MCP server by a given ID.
         
         ### Required scopes
 
@@ -1371,7 +1371,7 @@ paths:
       operationId: PUT-ai-upsert-mcp-server
       responses:
         '201':
-          description: ID of created mcp server.
+          description: ID of created MCP server.
           content:
             application/json:
               schema:
@@ -1392,10 +1392,10 @@ paths:
         '409':
           $ref: '#/components/responses/409_resp_common'
       description: |-
-        Updates or creates a specified mcp server by replacing all of its existing data with data from the request body.
-        If the `metadata.version` is provided then optimistic locking is enabled and version must match the version in the database.
+        Updates or creates a specified MCP server by replacing all of its existing data with data from the request body.
+        If the `metadata.version` is provided, then optimistic locking is enabled and version must match the version in the database.
         
-        ***Important***: If MCP server is being used by an enabled agent then disabling MCP is not possible without `force` flag set to `true`. Then the agent and MCP server will be disabled
+        ***Important***: If MCP server is being used by an enabled agent then disabling MCP is not possible without `force` flag set to `true`. Only then the agent and MCP server are disabled.
 
         ### Required scopes
 
@@ -1430,7 +1430,7 @@ paths:
           - `remove` (removing an item from the items list)
           - `replace` (replacing an item with given ID with new definition)
         
-        ***Important***: If MCP server is being used by an enabled agent then disabling MCP is not possible without `force` flag set to `true`. Then the agent and MCP server will be disabled
+        ***Important***: If MCP server is being used by an enabled agent then disabling MCP is not possible without `force` flag set to `true`. Only then the agent and MCP server are disabled.
 
         ### Required scopes
 
@@ -1459,9 +1459,9 @@ paths:
         '404':
           $ref: '#/components/responses/404_resp_common'
       description: |-
-        Deletes mcp server by given ID. 
+        Deletes MCP server by given ID. 
         
-        ***Important***: If mcp server is being used by an agent then delete operation is not possible without `force` flag set to `true`.
+        ***Important***: If MCP server is being used by an agent then delete operation is not possible without `force` flag set to `true`.
         
         ### Required scopes
 
@@ -1527,7 +1527,7 @@ paths:
         '403':
           $ref: '#/components/responses/403_resp_common'
       description: |-
-        Exports the agents by ids.
+        Exports the agents by IDs.
         
         ### Required scopes
 
@@ -1916,7 +1916,7 @@ components:
           description: Url of the self-hosted LLM.
         authorizationHeaderName:
           type: string
-          description: Name of the header required for authorization e.g. `Authorization`
+          description: Name of the header required for authorization e.g. `Authorization`.
         authorizationHeaderToken:
           type: object
           properties:
@@ -2006,7 +2006,7 @@ components:
       properties:
         name:
           type: string
-          description: Name of the token
+          description: Name of the token.
       required:
         - name
     TokenRequest:
@@ -2082,7 +2082,7 @@ components:
               properties:
                 events:
                   type: string
-                  description: List of events that trigger the agent
+                  description: List of events that trigger the agent.
               required:
                 - events
           required:
@@ -2092,7 +2092,7 @@ components:
 
     HandOff:
       type: boolean
-      description: Whether the agent is handOff or not. HandOff agents are special types of agents which can be called by other agents through `agentCollaborations` property and their configuration is hidden.
+      description: Indicates whether the agent is handOff or not. HandOff agents are special types of agents which can be called by other agents through `agentCollaborations` property and their configuration is hidden.
 
     BaseForAgentAndTemplateAndHandOff:
       type: object
@@ -2117,7 +2117,7 @@ components:
               description: LLM Prompt which describes how agent should work in a detailed way, which tools it could use to solve problems etc; it can contain examples and step by step guidance.
             icon:
               type: string
-              description: fa class of react icon.
+              description: The fa class of react icon.
             tags:
               type: array
               items:
@@ -2125,7 +2125,7 @@ components:
                 description: Markers that allow you to categorize the agent.
             enabled:
               type: boolean
-              description: Whether the agent is enabled.
+              description: Indicates whether the agent is enabled.
               default: false
           required:
             - name
@@ -2292,10 +2292,10 @@ components:
           description: Unique identifier of the agent.
         message:
           type: string
-          description: Agent's message.
+          description: Agent message.
         commerceEvent:
           type: string
-          description: Commerce event which triggered the job
+          description: Commerce event which triggered the job.
         metadata:
           $ref: '#/components/schemas/MetadataResponse'
     ImportResult:
@@ -2303,10 +2303,10 @@ components:
       properties:
         message:
           type: string
-          description: Short summary of the import
+          description: Short summary of the import.
         summary:
           type: object
-          description: Summary of the import
+          description: Summary of the import.
           properties:
             agents:
               type: array
@@ -2325,7 +2325,7 @@ components:
       properties:
         data:
           type: string
-          description: base64 encoded JSON value of the exported agents with related tools and MCP servers
+          description: The base64 encoded JSON value of the exported agents with related tools and MCP servers.
         checksum:
           type: string
           description: Checksum calculated based on JSON value. Validates if importing JSON is exactly the same as exported one.
@@ -2334,13 +2334,13 @@ components:
       properties:
         id:
           type: string
-          description: Id of the imported entity
+          description: ID of the imported entity.
         name:
           type: string
-          description: Name of the imported entity
+          description: Name of the imported entity.
         state:
           type: string
-          description: State of the imported entity
+          description: State of the imported entity.
           enum:
             - TO_CREATE
             - ENABLED
@@ -2365,7 +2365,7 @@ components:
           description: Unique identifier of the session.
         message:
           type: string
-          description: Agent's message.
+          description: Agent message.
 
     GenerationResponse:
       title: GenerationResponse
@@ -2460,17 +2460,17 @@ components:
         - type: object
           properties:
             exportedAt:
-              description: Date of the export process
+              description: Date of the export process.
               type: string
               format: date-time
             jobId:
-              description: Id of the Job
+              description: ID of the job.
               type: string
     DataWithChecksum:
       type: object
       properties:
         data:
-          description: base64 encoded JSON value of the exported agents with related tools and MCP servers
+          description: The base64 encoded JSON value of the exported agents with related tools and MCP servers
           type: string
         checksum:
           description: Checksum calculated based on decoded `data` value. Validates if importing JSON is exactly the same as exported one.
@@ -2481,7 +2481,7 @@ components:
         - agentIds
       properties:
         agentIds:
-          description: List of the agents ids
+          description: List of the agents IDs.
           type: array
           minimum: 0
           maximum: 100
@@ -2493,11 +2493,11 @@ components:
         - type: object
           properties:
             importedAt:
-              description: Date of the import process
+              description: Date of the import process.
               type: string
               format: date-time
             jobId:
-              description: Id of the Job
+              description: ID of the job.
               type: string
     ImportRequest:
       allOf:
@@ -2550,7 +2550,7 @@ components:
 
         * If the header is set to `*`, the localized fields should be provided as maps of translations, where the keys are language codes and values are the fields in their respective languages.
         * If the header is set to a specific language, the localized fields should be provided as strings.
-        * If the header is empty, the endpoint will assume that the localized fields are provided in the default language defined in the Configuration Service.
+        * If the header is empty, the endpoint assumes that the localized fields are provided in the default language defined in the Configuration Service.
 
         **Note**: You can provide the localized fields only in languages defined in the Configuration Service. In case the fields are provided in languages that are not defined in the Configuration Service, the request is rejected.
     header_xTotalCount:
@@ -2623,7 +2623,7 @@ components:
       in: query
       name: force
       example: false
-      description: Allows you to disable a given entity even if it is used as a dependency in other entries. In that case, cascade disable will be performed.
+      description: Allows you to disable a given entity even if it is used as a dependency in other entries. In that case, cascade disable is performed.
   responses:
     401_resp_common:
       description: The authorization token is invalid or has expired.
